--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -29,7 +29,7 @@ $accent-mint-color: #03a688;
   #container {
     border: solid 3px #474544;
     max-width: 768px;
-    margin: 60px auto;
+    margin: auto;
     position: relative;
   }
   
