Scroll, Info, About Us, Home Page additions

--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -131,7 +131,7 @@ $bg-color-2: rgb(221, 221, 221);
   transform: scale(1.1);
 }
 
-.home-card .btn-primary {
+.btn-primary {
   position: relative;
   display: inline-block;
   cursor: pointer;
