--- a/src/css/Store.scss
+++ b/src/css/Store.scss
@@ -11,8 +11,44 @@ $accent-mint-color: #03a688;
 $bg-color-1: #f2f2f2;
 $bg-color-2: rgb(221, 221, 221);
 
-.store-header {
-  background: $tertiary-color;
+.page-header {
+  width: 100%;
+  height: 80vh;
+  position: relative;
+  display: grid;
+  grid-template-rows: max-content 1fr;
+  grid-template-columns: 1fr max-content;
+
+  &__bg {
+    width: 100%;
+    height: 100%;
+    background: center center no-repeat
+      linear-gradient(
+        1.0turn,
+        $primary-color,
+        $tertiary-color,
+        $secondary-color,
+      );
+    background-size: cover;
+    filter: brightness(50%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+  &__title {
+    grid-area: 2 / 1 / 2 / 3;
+    align-self: center;
+    justify-self: center;
+    color: white;
+    text-transform: uppercase;
+    font-size: 4rem;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+    margin-top: -5rem;
+    z-index: 2;
+  }
+
 }
 
 .divider-lower {
@@ -29,8 +65,8 @@ $bg-color-2: rgb(221, 221, 221);
 // }
 
 .product-wrapper {
-  width: 400px;
-  height: 500px;
+  width: 20vw;
+  height: 80vh;
   background: white;
   margin: auto;
   position: relative;
