--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -471,6 +471,62 @@ $separator-space-bottom: 50px;
   }
 }
 
+.btn-primary {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+  &.learn-more {
+    font-weight: 600;
+    color: white;
+    text-transform: uppercase;
+    padding: 1em 1.5em;
+    background: $secondary-color;
+    border: 2px solid $primary-color;
+    border-radius: 0.75em;
+    transform-style: preserve-3d;
+    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+      background 150ms cubic-bezier(0, 0, 0.58, 1);
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: $primary-color;
+      border-radius: inherit;
+      box-shadow: 0 0 0 2px $primary-color, 0 0.625em 0 0 #d9f7cd;
+      transform: translate3d(0, 0.75em, -1em);
+      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+        box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+    }
+    &:hover {
+      background: $primary-color;
+      transform: translate(0, 0.25em);
+      &::before {
+        box-shadow: 0 0 0 2px $primary-color, 0 0.5em 0 0 #d9f7cd;
+        transform: translate3d(0, 0.5em, -1em);
+      }
+    }
+    &:active {
+      background: $primary-color;
+      transform: translate(0em, 0.75em);
+      &::before {
+        box-shadow: 0 0 0 2px $primary-color, 0 0 #d9f7cd;
+        transform: translate3d(0, 0, -1em);
+      }
+    }
+  }
+}
+
 .centered {
   text-align: center;
   justify-content: center;
@@ -526,6 +582,9 @@ $separator-space-bottom: 50px;
 }
 .margin-top {
   margin-top: 5%;
+}
+.margin-bottom {
+  margin-bottom: 5%;
 }
 
 .raised-box {
