--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -15,6 +15,7 @@ $bg-color-2: rgb(221, 221, 221);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
 }
 
 #logo {
@@ -32,6 +33,7 @@ $bg-color-2: rgb(221, 221, 221);
 // hero
 
 .hero {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -44,14 +46,23 @@ $bg-color-2: rgb(221, 221, 221);
   background-size: cover;
   box-shadow: 0px 0px 8px 2px #000000;
 }
+.hero-video {
+  height: 100vh;
+  position: absolute;
+  width: auto;
+  z-index: 0;
+}
 
 .hero-title {
+  top: 40%;
+  position: absolute;
   max-width: 16em;
   margin: 0;
   font-size: 12vh;
   font-weight: bold;
   line-height: 0.9;
-  color: white;
+  color: rgb(255, 255, 255);
+  z-index: 100;
 }
 
 @media only screen and (min-width: 32em) {
@@ -131,67 +142,16 @@ $bg-color-2: rgb(221, 221, 221);
   transform: scale(1.1);
 }
 
-.btn-primary {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  border: 0;
-  vertical-align: middle;
-  text-decoration: none;
-  font-size: inherit;
-  font-family: inherit;
-  &.learn-more {
-    font-weight: 600;
-    color: white;
-    text-transform: uppercase;
-    padding: 1em 1.5em;
-    background: $secondary-color;
-    border: 2px solid $primary-color;
-    border-radius: 0.75em;
-    transform-style: preserve-3d;
-    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
-      background 150ms cubic-bezier(0, 0, 0.58, 1);
-    &::before {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: $primary-color;
-      border-radius: inherit;
-      box-shadow: 0 0 0 2px $primary-color, 0 0.625em 0 0 #d9f7cd;
-      transform: translate3d(0, 0.75em, -1em);
-      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
-        box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-    }
-    &:hover {
-      background: $primary-color;
-      transform: translate(0, 0.25em);
-      &::before {
-        box-shadow: 0 0 0 2px $primary-color, 0 0.5em 0 0 #d9f7cd;
-        transform: translate3d(0, 0.5em, -1em);
-      }
-    }
-    &:active {
-      background: $primary-color;
-      transform: translate(0em, 0.75em);
-      &::before {
-        box-shadow: 0 0 0 2px $primary-color, 0 0 #d9f7cd;
-        transform: translate3d(0, 0, -1em);
-      }
-    }
-  }
-}
-
 .quote-container {
   margin-top: 5%;
   margin-bottom: 5%;
   align-items: center;
   text-align: center;
+
+  .quote-img {
+    height: 80vh;
+    width: auto;
+  }
 }
 
 .square-brackets-quote {
