--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -11,6 +11,47 @@ $accent-mint-color: #03a688;
 $bg-color-1: #f2f2f2;
 $bg-color-2: rgb(221, 221, 221);
 
+
+.page-header {
+  width: 100%;
+  height: 80vh;
+  position: relative;
+  display: grid;
+  grid-template-rows: max-content 1fr;
+  grid-template-columns: 1fr max-content;
+
+  &__bg {
+    width: 100%;
+    height: 100%;
+    background: center center no-repeat
+      linear-gradient(
+        .75turn,
+        $primary-color,
+        $tertiary-color,
+        $secondary-color,
+      );
+    background-size: cover;
+    filter: brightness(50%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+  &__title {
+    grid-area: 2 / 1 / 2 / 3;
+    align-self: center;
+    justify-self: center;
+    color: white;
+    text-transform: uppercase;
+    font-size: 4rem;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+    margin-top: -5rem;
+    z-index: 2;
+  }
+
+}
+
 .container {
   margin-left: 6%;
   margin-right: 6%;
@@ -35,7 +76,6 @@ html {
 .body {
   color: $bg-color-2;
   background-color: #f0f0f0;
-background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23bababa' fill-opacity='0.08'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 @mixin transition {
