--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -465,5 +465,8 @@ $bg-color-2: rgb(221, 221, 221);
   .image-container{
     display: none;
   }
-
+  .final-info img {
+    height: 80vh;
+    width: 70vh;
+  }
 }
