--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -457,16 +457,19 @@ $bg-color-2: rgb(221, 221, 221);
   }
 }
 
-
 @media (max-width: 900px) {
-  .alternating-info{
+  .alternating-info {
     display: none;
   }
-  .image-container{
+  .image-container {
     display: none;
   }
-  .final-info img {
-    height: 80vh;
-    width: 70vh;
+  .final-info {
+    margin-left: 1%;
+    margin-right: 1%;
+    img {
+      max-height: 80vh;
+      max-width: 70vh;
+    }
   }
 }
