--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1148,3 +1148,159 @@ $c-02: #a6dcee;
     }
   }
 }
+
+@mixin transition($params) {
+  -webkit-transition: $params;
+  -moz-transition: $params;
+  -khtml-transition: $params;
+  -o-transition: $params;
+  transition: $params;
+}
+
+@mixin scale($params) {
+  -webkit-transform: scale($params);
+  -moz-transform: scale($params);
+  -khtml-transform: scale($params);
+  -o-transform: scale($params);
+  transform: scale($params);
+}
+
+@mixin box-shadow($params) {
+  -webkit-box-shadow: $params;
+  -moz-box-shadow: $params;
+  -khtml-box-shadow: $params;
+  -o-box-shadow: $params;
+  box-shadow: $params;
+}
+
+@mixin rotate($params) {
+  -webkit-transform: rotate($params);
+  -moz-transform: rotate($params);
+  -khtml-transform: rotate($params);
+  -o-transform: rotate($params);
+  transform: rotate($params);
+}
+
+@mixin opacity($opacity) {
+  -webkit-opacity: $opacity;
+  -moz-opacity: $opacity;
+  -khtml-opacity: $opacity;
+  -o-opacity: $opacity;
+  opacity: $opacity;
+}
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  -khtml-border-radius: $radius;
+  -o-border-radius: $radius;
+  border-radius: $radius;
+}
+
+#mobile {
+  background: #95e3f5;
+  position: relative;
+  @include box-shadow(0px 0px 20px 0px rgba(0, 0, 0, 0.1));
+}
+
+#mobileBodyContent {
+  background: white;
+  position: relative;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  visibility: visible;
+  @include transition(all 0.3s ease-in);
+}
+
+#fixed {
+  height: 100%;
+  overflow: hidden;
+}
+
+#burgerBtn {
+  border-top: 2px solid #05c7f2;
+  height: 25px;
+  width: 30px;
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 30;
+  left: 20px;
+  top: 15px;
+  cursor: pointer;
+  @include transition(all 0.3s ease-in);
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 30px;
+    left: 0;
+    background: #05c7f2;
+    top: 10px;
+    @include transition(all 0.3s ease-in);
+  }
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 30px;
+    left: 0;
+    background: #05c7f2;
+    bottom: 0;
+    @include transition(all 0.3s ease-in);
+  }
+}
+
+#nav {
+  position: fixed;
+  z-index: 10;
+  list-style-type: none;
+  margin: 100px 0 0 20px;
+  padding: 0;
+  overflow: hidden;
+  li {
+    text-align: center;
+    color: white;
+    font-size: 1.5em;
+    height: 30px;
+    width: 0;
+    margin: 30px 0;
+    @include transition(all 0.6s ease-in);
+    & + li {
+      margin-left: -40px;
+      & + li {
+        margin-left: -80px;
+        & + li {
+          margin-left: -120px;
+        }
+      }
+    }
+  }
+}
+
+.navigation {
+  #nav li {
+    width: 200px;
+    margin-left: 0;
+  }
+  #burgerBtn {
+    border-color: transparent;
+    &:before {
+      @include rotate(45deg);
+      width: 33px;
+      left: -2px;
+    }
+    &:after {
+      @include rotate(135deg);
+      bottom: 11px;
+      width: 33px;
+      left: -2px;
+    }
+  }
+  #mobileBodyContent {
+    @include scale(0.95);
+    margin-left: 260px;
+  }
+}
