--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1149,161 +1149,66 @@ $c-02: #a6dcee;
   }
 }
 
-@mixin transition($params) {
-  -webkit-transition: $params;
-  -moz-transition: $params;
-  -khtml-transition: $params;
-  -o-transition: $params;
-  transition: $params;
-}
-
-@mixin scale($params) {
-  -webkit-transform: scale($params);
-  -moz-transform: scale($params);
-  -khtml-transform: scale($params);
-  -o-transform: scale($params);
-  transform: scale($params);
-}
-
-@mixin box-shadow($params) {
-  -webkit-box-shadow: $params;
-  -moz-box-shadow: $params;
-  -khtml-box-shadow: $params;
-  -o-box-shadow: $params;
-  box-shadow: $params;
-}
-
-@mixin rotate($params) {
-  -webkit-transform: rotate($params);
-  -moz-transform: rotate($params);
-  -khtml-transform: rotate($params);
-  -o-transform: rotate($params);
-  transform: rotate($params);
-}
-
-@mixin opacity($opacity) {
-  -webkit-opacity: $opacity;
-  -moz-opacity: $opacity;
-  -khtml-opacity: $opacity;
-  -o-opacity: $opacity;
-  opacity: $opacity;
-}
-
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-  -moz-border-radius: $radius;
-  -khtml-border-radius: $radius;
-  -o-border-radius: $radius;
-  border-radius: $radius;
-}
-
 #mobile {
-  background: #95e3f5;
-  position: relative;
-  @include box-shadow(0px 0px 20px 0px rgba(0, 0, 0, 0.1));
-}
-
-#mobileBodyContent {
-  background: white;
-  position: relative;
-  z-index: 20;
-  width: 100%;
-  height: 100%;
-  visibility: visible;
-  @include transition(all 0.3s ease-in);
-}
-
-#fixed {
-  height: 100%;
-  overflow: hidden;
-}
-
-#burgerBtn {
-  border-top: 2px solid #05c7f2;
-  height: 25px;
-  width: 30px;
-  box-sizing: border-box;
-  position: fixed;
-  z-index: 30;
-  left: 20px;
-  top: 15px;
-  cursor: pointer;
-  @include transition(all 0.3s ease-in);
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 2px;
-    width: 30px;
-    left: 0;
-    background: #05c7f2;
-    top: 10px;
-    @include transition(all 0.3s ease-in);
+  .burger-container {
+    cursor: pointer;
+    display: flex;
+    right: 0;
+    top: 2;
+    position: fixed;
+    z-index: 10000;
   }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 2px;
-    width: 30px;
-    left: 0;
-    background: #05c7f2;
-    bottom: 0;
-    @include transition(all 0.3s ease-in);
+  svg {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-}
-
-#nav {
-  position: fixed;
-  z-index: 10;
-  list-style-type: none;
-  margin: 100px 0 0 20px;
-  padding: 0;
-  overflow: hidden;
-  li {
-    text-align: center;
-    color: white;
-    font-size: 1.5em;
-    height: 30px;
-    width: 0;
-    margin: 30px 0;
-    @include transition(all 0.6s ease-in);
-    & + li {
-      margin-left: -40px;
-      & + li {
-        margin-left: -80px;
-        & + li {
-          margin-left: -120px;
-        }
-      }
-    }
+  .active svg {
+    transform: rotate(90deg);
+  }
+  path {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  path:nth-child(1) {
+    transform-origin: 36% 40%;
+  }
+  path:nth-child(2) {
+    stroke-dasharray: 29 299;
+  }
+  path:nth-child(3) {
+    transform-origin: 35% 63%;
+  }
+  path:nth-child(4) {
+    stroke-dasharray: 29 299;
+  }
+  path:nth-child(5) {
+    transform-origin: 61% 52%;
+  }
+  path:nth-child(6) {
+    transform-origin: 62% 52%;
+  }
+  .active path:nth-child(1) {
+    transform: translateX(9px) translateY(1px) rotate(45deg);
+  }
+  .active path:nth-child(2) {
+    stroke-dasharray: 225 299;
+    stroke-dashoffset: -72px;
+  }
+  .active path:nth-child(3) {
+    transform: translateX(9px) translateY(1px) rotate(-45deg);
+  }
+  .active path:nth-child(4) {
+    stroke-dasharray: 225 299;
+    stroke-dashoffset: -72px;
+  }
+  .active path:nth-child(5) {
+    transform: translateX(9px) translateY(1px) rotate(-45deg);
+  }
+  .active path:nth-child(6) {
+    transform: translateX(9px) translateY(1px) rotate(45deg);
   }
 }
 
-.navigation {
-  #nav li {
-    width: 200px;
-    margin-left: 0;
-  }
-  #burgerBtn {
-    border-color: transparent;
-    &:before {
-      @include rotate(45deg);
-      width: 33px;
-      left: -2px;
-    }
-    &:after {
-      @include rotate(135deg);
-      bottom: 11px;
-      width: 33px;
-      left: -2px;
-    }
-  }
-  #mobileBodyContent {
-    @include scale(0.95);
-    margin-left: 260px;
-  }
-}
 $color-base: #fff;
 $color-text: #222;
 $color-accent: $main;
@@ -1313,7 +1218,8 @@ nav {
   left: 0;
   right: 0;
   top: 0;
-  height: 50px;
+  height: 75px;
+  font-size: 20px;
   background: $color-base;
   box-shadow: 0 0px 9px 4px rgba(#000, 0.1), 0 -5px 2px 2px rgba(#000, 0.1);
   z-index: 1000;
@@ -1330,18 +1236,15 @@ nav {
     float: left;
     height: 50px;
     line-height: 50px;
-    padding: 0 15px;
+    padding: 10px 15px;
     font-size: 22px;
     font-weight: 900;
     text-transform: uppercase;
-
-    &:hover {
-      background: lighten($color-accent, 40);
-    }
   }
 
   .links {
     float: right;
+    margin-top: 15px;
     margin-right: 30px;
     position: relative;
 
@@ -1437,5 +1340,189 @@ nav {
   100% {
     opacity: 1;
     transform: none;
+  }
+}
+
+$black: #252525;
+$white: #fff;
+$grey: #eaeaea;
+
+$primary-color: $main;
+$primary-color-dark: darken($primary-color, 10%);
+$primary-color-tint-1: lighten($primary-color, 10%);
+$primary-color-tint-2: lighten($primary-color, 20%);
+$primary-color-tint-3: lighten($primary-color, 30%);
+$primary-color-tint-4: lighten($primary-color, 40%);
+$primary-color-tint-5: lighten($primary-color, 50%);
+
+$link-color: $primary-color;
+
+a {
+  text-decoration: none;
+}
+.nav-top {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 101;
+  padding: 10px 20px;
+  width: 100%;
+  height: 50px;
+  background-color: $primary-color-dark;
+
+  .hamburger {
+    margin-left: auto;
+    color: $white;
+    cursor: pointer;
+  }
+}
+.nav-drill {
+  margin-top: 50px;
+  transform: translateX(100%);
+}
+.nav-is-toggled {
+  .nav-drill {
+    transform: translateX(0);
+  }
+  &::after {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+// ---------------------------------------
+// important stuff starts here
+
+$nav-width: 250px;
+$nav-padding: 0.875em 1em;
+$nav-border-color: $primary-color-tint-5;
+$nav-background-color: $white;
+$nav-icon-font: "Material Icons";
+$nav-icon-arrow-right: "chevron_right";
+$nav-icon-arrow-left: "chevron_left";
+
+$nav-level-border-color: $primary-color;
+$nav-level-background-color: $primary-color-tint-5;
+
+$nav-level3-background-color: $primary-color-tint-4;
+$nav-level4-background-color: $primary-color-tint-3;
+$nav-level5-background-color: $primary-color-tint-2;
+
+.nav {
+  &-drill {
+    display: flex;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    right: 0;
+    width: $nav-width;
+    height: 100vh;
+    background-color: $nav-background-color;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    transition: 0.45s;
+  }
+
+  &-items {
+    flex: 0 0 100%;
+    list-style: none;
+  }
+
+  &-item {
+    &:not(:last-child) {
+      border-bottom: solid 1px $nav-border-color;
+    }
+  }
+
+  &-link {
+    display: block;
+    padding: $nav-padding;
+    background-color: $nav-background-color;
+    color: $link-color;
+    font-size: 1rem;
+    line-height: 1.5em;
+    font-weight: 300;
+  }
+
+  &-expand {
+    &-content {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: translateX(100%);
+      background-color: $nav-level-background-color;
+      transition: 0.3s;
+      visibility: hidden;
+
+      .nav-item {
+        &:not(:last-child) {
+          border-bottom: solid 1px $nav-level-border-color;
+        }
+      }
+
+      .nav-link {
+        background-color: $nav-level-background-color;
+      }
+
+      .nav-back-link {
+        display: flex;
+        align-items: center;
+        background-color: $primary-color !important;
+        color: $white;
+
+        &::before {
+          content: $nav-icon-arrow-left;
+          margin-right: 0.5em;
+          font-family: $nav-icon-font;
+        }
+      }
+    }
+
+    &-link {
+      display: flex;
+      justify-content: space-between;
+
+      &::after {
+        content: $nav-icon-arrow-right;
+        flex: 0 1 auto;
+        font-family: $nav-icon-font;
+      }
+    }
+
+    &.active {
+      > .nav-expand-content {
+        transform: translateX(0);
+        visibility: visible;
+      }
+    }
+
+    // quick example for other level colours
+    .nav-expand-content {
+      background-color: $nav-level-background-color;
+      .nav-link {
+        background-color: $nav-level-background-color;
+      }
+      .nav-expand-content {
+        background-color: $nav-level3-background-color;
+        .nav-link {
+          background-color: $nav-level3-background-color;
+        }
+        .nav-expand-content {
+          background-color: $nav-level4-background-color;
+          .nav-link {
+            background-color: $nav-level4-background-color;
+          }
+          .nav-expand-content {
+            background-color: $nav-level5-background-color;
+            .nav-link {
+              background-color: $nav-level5-background-color;
+            }
+          }
+        }
+      }
+    }
   }
 }
