--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1307,7 +1307,7 @@ nav {
           clear: both;
           list-style: none;
           display: block;
-          padding: 0 10px;
+          padding: 0;
           margin: 0;
           width: 100%;
 
@@ -1343,184 +1343,77 @@ nav {
   }
 }
 
-$black: #252525;
-$white: #fff;
-$grey: #eaeaea;
-
-$primary-color: $main;
-$primary-color-dark: darken($primary-color, 10%);
-$primary-color-tint-1: lighten($primary-color, 10%);
-$primary-color-tint-2: lighten($primary-color, 20%);
-$primary-color-tint-3: lighten($primary-color, 30%);
-$primary-color-tint-4: lighten($primary-color, 40%);
-$primary-color-tint-5: lighten($primary-color, 50%);
-
-$link-color: $primary-color;
-
-a {
-  text-decoration: none;
-}
-.nav-top {
-  display: flex;
-  align-items: center;
+.menu {
+  --front: #275efe;
+  --back: #d93757;
+  --icon: white;
+  perspective: 600px;
+  width: 48px;
+  height: 48px;
   position: fixed;
-  z-index: 101;
-  padding: 10px 20px;
-  width: 100%;
-  height: 50px;
-  background-color: $primary-color-dark;
-
-  .hamburger {
-    margin-left: auto;
-    color: $white;
-    cursor: pointer;
-  }
-}
-.nav-drill {
-  margin-top: 50px;
-  transform: translateX(100%);
-}
-.nav-is-toggled {
-  .nav-drill {
-    transform: translateX(0);
-  }
-  &::after {
-    opacity: 1;
-    visibility: visible;
-  }
-}
-
-// ---------------------------------------
-// important stuff starts here
-
-$nav-width: 250px;
-$nav-padding: 0.875em 1em;
-$nav-border-color: $primary-color-tint-5;
-$nav-background-color: $white;
-$nav-icon-font: "Material Icons";
-$nav-icon-arrow-right: "chevron_right";
-$nav-icon-arrow-left: "chevron_left";
-
-$nav-level-border-color: $primary-color;
-$nav-level-background-color: $primary-color-tint-5;
-
-$nav-level3-background-color: $primary-color-tint-4;
-$nav-level4-background-color: $primary-color-tint-3;
-$nav-level5-background-color: $primary-color-tint-2;
-
-.nav {
-  &-drill {
-    display: flex;
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    right: 0;
-    width: $nav-width;
-    height: 100vh;
-    background-color: $nav-background-color;
-    overflow-y: auto;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
-    transition: 0.45s;
-  }
-
-  &-items {
-    flex: 0 0 100%;
-    list-style: none;
-  }
-
-  &-item {
-    &:not(:last-child) {
-      border-bottom: solid 1px $nav-border-color;
-    }
-  }
-
-  &-link {
-    display: block;
-    padding: $nav-padding;
-    background-color: $nav-background-color;
-    color: $link-color;
-    font-size: 1rem;
-    line-height: 1.5em;
-    font-weight: 300;
-  }
-
-  &-expand {
-    &-content {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      transform: translateX(100%);
-      background-color: $nav-level-background-color;
-      transition: 0.3s;
-      visibility: hidden;
-
-      .nav-item {
-        &:not(:last-child) {
-          border-bottom: solid 1px $nav-level-border-color;
+  top: 5%;
+  right: 5%;
+  z-index: 10000;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  input {
+    display: none;
+    & + div {
+      span {
+        --rotateY: 0deg;
+        --background: var(--front);
+        transform: rotateY(var(--rotateY));
+        transform-style: preserve-3d;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background: var(--background);
+        backface-visibility: hidden;
+        transition: transform 0.6s cubic-bezier(0.2, 0.64, 0.48, 1.24);
+        &:before,
+        &:after {
+          --rotate: 0deg;
+          content: "";
+          position: absolute;
+          width: 16px;
+          height: 2px;
+          border-radius: 1px;
+          top: 50%;
+          left: 50%;
+          background: var(--icon);
+          backface-visibility: hidden;
+          transform: translate(-50%, -50%) rotate(var(--rotate)) translateZ(6px);
         }
-      }
-
-      .nav-link {
-        background-color: $nav-level-background-color;
-      }
-
-      .nav-back-link {
-        display: flex;
-        align-items: center;
-        background-color: $primary-color !important;
-        color: $white;
-
-        &::before {
-          content: $nav-icon-arrow-left;
-          margin-right: 0.5em;
-          font-family: $nav-icon-font;
-        }
-      }
-    }
-
-    &-link {
-      display: flex;
-      justify-content: space-between;
-
-      &::after {
-        content: $nav-icon-arrow-right;
-        flex: 0 1 auto;
-        font-family: $nav-icon-font;
-      }
-    }
-
-    &.active {
-      > .nav-expand-content {
-        transform: translateX(0);
-        visibility: visible;
-      }
-    }
-
-    // quick example for other level colours
-    .nav-expand-content {
-      background-color: $nav-level-background-color;
-      .nav-link {
-        background-color: $nav-level-background-color;
-      }
-      .nav-expand-content {
-        background-color: $nav-level3-background-color;
-        .nav-link {
-          background-color: $nav-level3-background-color;
-        }
-        .nav-expand-content {
-          background-color: $nav-level4-background-color;
-          .nav-link {
-            background-color: $nav-level4-background-color;
+        &:first-child {
+          --background: var(--back);
+          &:before {
+            --rotate: -45deg;
           }
-          .nav-expand-content {
-            background-color: $nav-level5-background-color;
-            .nav-link {
-              background-color: $nav-level5-background-color;
-            }
+          &:after {
+            --rotate: 45deg;
           }
+        }
+        &:last-child {
+          --rotateY: 180deg;
+          &:before {
+            box-shadow: 0 -5px 0 var(--icon), 0 5px 0 var(--icon);
+          }
+          &:after {
+            display: none;
+          }
+        }
+      }
+    }
+    &:checked + div {
+      span {
+        &:first-child {
+          --rotateY: -180deg;
+        }
+        &:last-child {
+          --rotateY: 0deg;
         }
       }
     }
